@@ -110,47 +110,3 @@ dependencies {
 
     testImplementation 'org.testcontainers:mongodb'
 }
-
-task shenandoahTest(type: Test) {
-    // set heap size for the test JVM(s)
-    maxHeapSize = "1500m"
-
-    useJUnitPlatform {
-        includeTags 'gc'
-    }
-
-    jvmArgs '-XX:+UseShenandoahGC'
-}
-
-task zgcTest(type: Test) {
-    // set heap size for the test JVM(s)
-    maxHeapSize = "1500m"
-
-    useJUnitPlatform {
-        includeTags 'gc'
-    }
-
-    jvmArgs '-XX:+UseZGC'
-}
-
-task openj9BalancedTest(type: Test) {
-    // set heap size for the test JVM(s)
-    maxHeapSize = "1500m"
-
-    useJUnitPlatform {
-        includeTags 'gc'
-    }
-
-    jvmArgs '-Xgcpolicy:balanced'
-}
-
-task openj9ConcurrentScavengeTest(type: Test) {
-    // set heap size for the test JVM(s)
-    maxHeapSize = "1500m"
-
-    useJUnitPlatform {
-        includeTags 'gc'
-    }
-
-    jvmArgs '-Xgc:concurrentScavenge'
-}
